@@ -1,0 +1,403 @@
+//
+// HD channels
+//
+
+channelsnames[1001] = "NED1 HD (S)"
+channels[1001] = "S23.5E-3-3208-7035"
+channelsnames[1002] = "NED2 HD (S)"
+channels[1002] = "S23.5E-3-3202-6080"
+channelsnames[1003] = "NED3 HD (S)"
+channels[1003] = "S23.5E-3-3225-21040"
+channelsnames[1004] = "RTL4 HD (S)"
+channels[1004] = "S23.5E-3-3208-7020"
+channelsnames[1005] = "RTL5 HD (S)"
+channels[1005] = "S23.5E-3-3225-21015"
+channelsnames[1006] = "SBS6 HD (S)"
+channels[1006] = "S23.5E-3-3202-6090"
+channelsnames[1007] = "RTL7 HD (S)"
+channels[1007] = "S23.5E-3-3225-21010"
+channelsnames[1008] = "Veronica/DisneyXD HD (S)"
+channels[1008] = "S23.5E-3-3225-21035"
+channelsnames[1009] = "NET5 HD (S)"
+channels[1009] = "S23.5E-3-3225-21020"
+channelsnames[1010] = "RTL8 HD (S)"
+channels[1010] = "S23.5E-3-3208-7036"
+channelsnames[1011] = "Discovery HD (S)"
+channels[1011] = "S23.5E-3-3208-7010"
+channelsnames[1012] = "Eurosport HD (S)"
+channels[1012] = "S23.5E-3-3205-5033"
+channelsnames[1013] = "History HD DUT (S)"
+channels[1013] = "S23.5E-3-3205-5151"
+channelsnames[1014] = "Travel Channel HD WE (S)"
+channels[1014] = "S23.5E-3-3221-5056"
+channelsnames[1015] = "Penthouse HD. (S)"
+channels[1015] = "S23.5E-3-3202-6094"
+channelsnames[1016] = "NGC HD (S)"
+channels[1016] = "S23.5E-3-3208-7015"
+channelsnames[1017] = "Film 1 Premiere HD (S)"
+channels[1017] = "S23.5E-3-3222-20955"
+channelsnames[1018] = "Sport1 SELECT HD (S)"
+channels[1018] = "S23.5E-3-3222-20960"
+channelsnames[1019] = "EDL1 HD (S)"
+channels[1019] = "S23.5E-3-3202-6092"
+channelsnames[1020] = "Brava HDTV (S)"
+channels[1020] = "S23.5E-3-3208-7025"
+channelsnames[1021] = "Omroep Zeeland Televisie (S)"
+channels[1021] = "S23.5E-3-3211-20818"
+channelsnames[1022] = "TV Drenthe (S)"
+channels[1022] = "S23.5E-3-3211-20812"
+channelsnames[1023] = "TV West (S)"
+channels[1023] = "S23.5E-3-3211-20804"
+channelsnames[1024] = "AT5 (S)"
+channels[1024] = "S23.5E-3-3211-20806"
+channelsnames[1025] = "L1MBURG (S)"
+channels[1025] = "S23.5E-3-3211-20802"
+channelsnames[1026] = "Omroep Brabant Televisie (S)"
+channels[1026] = "S23.5E-3-3211-20820"
+channelsnames[1027] = "TVL/ATV/TV Oost (S)"
+channels[1027] = "S23.5E-3-3202-6055"
+channelsnames[1028] = "een HD (S)"
+channels[1028] = "S23.5E-3-3225-21025"
+channelsnames[1029] = "Canvas HD (S)"
+channels[1029] = "S23.5E-3-3225-21030"
+channelsnames[1030] = "VTM HD (S)"
+channels[1030] = "S23.5E-3-3208-7030"
+channelsnames[1031] = "Film1 Family (S)"
+channels[1031] = "S23.5E-3-3222-20910"
+channelsnames[1032] = "Film1 Sundance (S)"
+channels[1032] = "S23.5E-3-3222-20915"
+channelsnames[1033] = "Film1 Action (S)"
+channels[1033] = "S23.5E-3-3222-20920"
+channelsnames[1034] = "AXN CS (S)"
+channels[1034] = "S23.5E-3-3211-20822"
+channelsnames[1035] = "AXN Crime CS (S)"
+channels[1035] = "S23.5E-3-3211-20823"
+channelsnames[1036] = "AXN SciFi CS (S)"
+channels[1036] = "S23.5E-3-3211-20824"
+channelsnames[1037] = "Journaal24/Best 24 (S)"
+channels[1037] = "S23.5E-3-3202-6010"
+channelsnames[1038] = "Holland Doc 24 (S)"
+channels[1038] = "S23.5E-3-3202-6015"
+channelsnames[1039] = "Zappelin/Zapp24 (S)"
+channels[1039] = "S23.5E-3-3202-6020"
+channelsnames[1040] = "Humor 24/Nost.Net (S)"
+channels[1040] = "S23.5E-3-3202-6025"
+channelsnames[1041] = "FoxLife (S)"
+channels[1041] = "S23.5E-3-3202-6030"
+channelsnames[1042] = "Boomerang (S)"
+channels[1042] = "S23.5E-3-3202-6035"
+channelsnames[1043] = "Discovery Science (S)"
+channels[1043] = "S23.5E-3-3202-6040"
+channelsnames[1044] = "Investigation Discovery (S)"
+channels[1044] = "S23.5E-3-3202-6045"
+channelsnames[1045] = "TEST (S)"
+channels[1045] = "S23.5E-3-3202-6050"
+channelsnames[1046] = "BiB (S)"
+channels[1046] = "S23.5E-3-3202-6060"
+channelsnames[1047] = "Disney Channel (S)"
+channels[1047] = "S23.5E-3-3202-6065"
+channelsnames[1048] = "EDL2 (S)"
+channels[1048] = "S23.5E-3-3222-20935"
+channelsnames[1049] = "Cartoon/TCM (S)"
+channels[1049] = "S23.5E-3-3222-20940"
+channelsnames[1050] = "Planet (S)"
+channels[1050] = "S19.2E-53-1097-2044"
+channelsnames[1051] = "Extreme Sports (S)"
+channels[1051] = "S23.5E-3-3222-20945"
+channelsnames[1052] = "Sport1 Voetbal (S)"
+channels[1052] = "S23.5E-3-3222-20925"
+channelsnames[1053] = "Sport1 Golf (S)"
+channels[1053] = "S23.5E-3-3222-20930"
+channelsnames[1100] = "MGM HD (S)"
+channels[1100] = "S28.2E-2-2016-3807"
+channelsnames[1101] = "Sky DraRomHD (S)"
+channels[1101] = "S28.2E-2-2024-3816"
+channelsnames[1102] = "Sky MdnGrtsHD (S)"
+channels[1102] = "S28.2E-2-2024-3815"
+channelsnames[1103] = "Sky ScFi/HorHD (S)"
+channels[1103] = "S28.2E-2-2024-3817"
+channelsnames[1104] = "SkyPremiereHD (S)"
+channels[1104] = "S28.2E-2-2016-3821"
+channelsnames[1105] = "Sky ShowcseHD (S)"
+channels[1105] = "S28.2E-2-2001-3833"
+channelsnames[1106] = "Sky Action HD (S)"
+channels[1106] = "S28.2E-2-2028-3814"
+channelsnames[1107] = "Sky Classics HD (S)"
+channels[1107] = "S28.2E-2-2035-3812"
+channelsnames[1108] = "Sky Comedy HD (S)"
+channels[1108] = "S28.2E-2-2024-3819"
+channelsnames[1109] = "Sky Family HD (S)"
+channels[1109] = "S28.2E-2-2016-3818"
+channelsnames[1110] = "Sky Thriller HD (S)"
+channels[1110] = "S28.2E-2-2016-3862"
+channelsnames[1150] = "Syfy HD (S)"
+channels[1150] = "S28.2E-2-2032-3874"
+channelsnames[1151] = "Universal HD (S)"
+channels[1151] = "S28.2E-2-2035-3880"
+channelsnames[1152] = "Comedy Cen HD (S)"
+channels[1152] = "S28.2E-2-2020-3856"
+channelsnames[1153] = "FX HD (S)"
+channels[1153] = "S28.2E-2-2008-3823"
+channelsnames[1201] = "BBC HD (S)"
+channels[1201] = "S28.2E-2-2050-6940"
+channelsnames[1202] = "BBC One HD (S)"
+channels[1202] = "S28.2E-2-2050-6941"
+channelsnames[1211] = "ITV1 HD (S)"
+channels[1211] = "S28.2E-2-2049-10000"
+channelsnames[1212] = "ITV1 HD (S)"
+channels[1212] = "S28.2E-2-2056-3851"
+channelsnames[1213] = "ITV1 HD (S)"
+channels[1213] = "S28.2E-2-2056-3852"
+channelsnames[1214] = "ITV2 HD (S)"
+channels[1214] = "S28.2E-2-2003-3932"
+channelsnames[1215] = "ITV3 HD (S)"
+channels[1215] = "S28.2E-2-2003-3933"
+channelsnames[1216] = "ITV4 HD (S)"
+channels[1216] = "S28.2E-2-2003-3934"
+channelsnames[1217] = "3855 (S)"
+channels[1217] = "S28.2E-2-2056-3855"
+channelsnames[1220] = "Channel 4 HD (S)"
+channels[1220] = "S28.2E-2-2068-21200"
+channelsnames[1221] = "Channel 4 HD (S)"
+channels[1221] = "S28.2E-2-2005-3875"
+channelsnames[1222] = "E4 HD (S)"
+channels[1222] = "S28.2E-2-2008-3876"
+channelsnames[1230] = "Channel 5 HD (S)"
+channels[1230] = "S28.2E-2-2029-3858"
+channelsnames[1260] = "Sky1 HD (S)"
+channels[1260] = "S28.2E-2-2033-3861"
+channelsnames[1261] = "Sky Arts 1 HD (S)"
+channels[1261] = "S28.2E-2-2039-3863"
+channelsnames[1262] = "Sky Arts 2 HD (S)"
+channels[1262] = "S28.2E-2-2008-3864"
+channelsnames[1263] = "Sky Atlantic HD (S)"
+channels[1263] = "S28.2E-2-2033-3853"
+channelsnames[1264] = "Eden HD (S)"
+channels[1264] = "S28.2E-2-2020-3868"
+channelsnames[1265] = "Good Food HD (S)"
+channels[1265] = "S28.2E-2-2027-3867"
+channelsnames[1266] = "Good Food HD (S)"
+channels[1266] = "S28.2E-2-2033-3867"
+channelsnames[1267] = "Sky Indie HD (S)"
+channels[1267] = "S28.2E-2-2035-3820"
+channelsnames[1268] = "Sky Insider HD (S)"
+channels[1268] = "S28.2E-2-2035-3101"
+channelsnames[1269] = "Sky Living HD (S)"
+channels[1269] = "S28.2E-2-2005-3866"
+channelsnames[1300] = "Disney Cine HD (S)"
+channels[1300] = "S28.2E-2-2032-3873"
+channelsnames[1301] = "Disney XD HD (S)"
+channels[1301] = "S28.2E-2-2003-3870"
+channelsnames[1302] = "Nickelodeon HD (S)"
+channels[1302] = "S13.0E-318-1400-31"
+channelsnames[1303] = "Disney Cinemagic HD (S)"
+channels[1303] = "S19.2E-133-13-111"
+channelsnames[1304] = "Disney Channel HD (S)"
+channels[1304] = "S19.2E-133-11-116"
+channelsnames[1350] = "Crime HD (S)"
+channels[1350] = "S28.2E-2-2028-3888"
+channelsnames[1351] = "Discovery HD (S)"
+channels[1351] = "S28.2E-2-2032-3803"
+channelsnames[1352] = "Bio HD (S)"
+channels[1352] = "S28.2E-2-2028-3887"
+channelsnames[1353] = "History HD (S)"
+channels[1353] = "S28.2E-2-2028-3886"
+channelsnames[1354] = "Nat Geo HD (S)"
+channels[1354] = "S28.2E-2-2020-3832"
+channelsnames[1355] = "NatGeoWild HD (S)"
+channels[1355] = "S28.2E-2-2028-3885"
+channelsnames[1356] = "NatGeo Wild HD (S)"
+channels[1356] = "S23.5E-3-3226-5601"
+channelsnames[1357] = "Viasat HD (S)"
+channels[1357] = "S23.5E-3-3226-5603"
+channelsnames[1358] = "NatGeo HD (S)"
+channels[1358] = "S23.5E-3-3226-5605"
+channelsnames[1401] = "Das Erste HD (S)"
+channels[1401] = "S19.2E-1-1019-10301"
+channelsnames[1402] = "ZDF HD (S)"
+channels[1402] = "S19.2E-1-1011-11110"
+channelsnames[1403] = "Einsfestival HD (S)"
+channels[1403] = "S19.2E-1-1201-28396"
+channelsnames[1404] = "ANIXE HD (S)"
+channels[1404] = "S19.2E-1-1053-21100"
+channelsnames[1405] = "ServusTV HD Deutschland (S)"
+channels[1405] = "S19.2E-1-1007-4914"
+channelsnames[1406] = "arte HD (S)"
+channels[1406] = "S19.2E-1-1019-10302"
+channelsnames[1407] = "Arte HD (S)"
+channels[1407] = "S13.0E-319-15900-307"
+channelsnames[1408] = "sonnenklar.TV HD (S)"
+channels[1408] = "S19.2E-1-1109-5400"
+channelsnames[1409] = "zdf_neo HD (S)"
+channels[1409] = "S19.2E-1-1011-11130"
+channelsnames[1410] = "zdf.kultur HD (S)"
+channels[1410] = "S19.2E-1-1011-11140"
+channelsnames[1420] = "NICK/CC HD (S)"
+channels[1420] = "S19.2E-1-1053-21107"
+channelsnames[1421] = "N24 HD (S)"
+channels[1421] = "S19.2E-1-1053-21108"
+channelsnames[1422] = "RTL HD (S)"
+channels[1422] = "S19.2E-1-1057-61200"
+channelsnames[1423] = "VOX HD (S)"
+channels[1423] = "S19.2E-1-1057-61201"
+channelsnames[1424] = "SPORT1 HD (S)"
+channels[1424] = "S19.2E-1-1057-61204"
+channelsnames[1425] = "RTL2 HD (S)"
+channels[1425] = "S19.2E-1-1057-61205"
+channelsnames[1426] = "SAT.1 HD (S)"
+channels[1426] = "S19.2E-1-1017-61300"
+channelsnames[1427] = "ProSieben HD (S)"
+channels[1427] = "S19.2E-1-1017-61301"
+channelsnames[1428] = "kabel eins HD (S)"
+channels[1428] = "S19.2E-1-1017-61302"
+channelsnames[1429] = "SIXX HD (S)"
+channels[1429] = "S19.2E-1-1017-61303"
+channelsnames[1430] = "TELE 5 HD (S)"
+channels[1430] = "S19.2E-1-1109-5401"
+channelsnames[1450] = "Fox HD (S)"
+channels[1450] = "S19.2E-133-14-124"
+channelsnames[1451] = "Discovery HD (S)"
+channels[1451] = "S19.2E-133-6-130"
+channelsnames[1452] = "Sky Cinema HD (S)"
+channels[1452] = "S19.2E-133-6-131"
+channelsnames[1453] = "NatGeo HD (S)"
+channels[1453] = "S19.2E-133-13-112"
+channelsnames[1454] = "History HD (S)"
+channels[1454] = "S19.2E-133-13-113"
+channelsnames[1455] = "Sky Hits HD (S)"
+channels[1455] = "S19.2E-133-12-107"
+channelsnames[1456] = "Sky Action HD (S)"
+channels[1456] = "S19.2E-133-12-106"
+channelsnames[1457] = "Nat Geo Wild HD (S)"
+channels[1457] = "S19.2E-133-11-118"
+channelsnames[1501] = "ORF1 HD (S)"
+channels[1501] = "S19.2E-1-1007-4911"
+channelsnames[1502] = "ORF2 HD (S)"
+channels[1502] = "S19.2E-1-1007-4912"
+channelsnames[1503] = "ServusTV HD Oesterreich (S)"
+channels[1503] = "S19.2E-1-1007-4913"
+channelsnames[1510] = "HD suisse (S)"
+channels[1510] = "S13.0E-318-8500-990"
+channelsnames[1511] = "SF 1 HD (S)"
+channels[1511] = "S13.0E-318-12300-17201"
+channelsnames[1512] = "SF zwei HD (S)"
+channels[1512] = "S13.0E-318-12300-17202"
+channelsnames[1513] = "RTS Un HD (S)"
+channels[1513] = "S13.0E-318-12300-17203"
+channelsnames[1514] = "RTS Deux HD (S)"
+channels[1514] = "S13.0E-318-12300-17204"
+channelsnames[1515] = "RSI LA 1 HD (S)"
+channels[1515] = "S13.0E-318-1700-14051"
+channelsnames[1516] = "RSI LA 2 HD (S)"
+channels[1516] = "S13.0E-318-8500-951"
+channelsnames[1550] = "Sky Sport News HD (S)"
+channels[1550] = "S19.2E-133-12-108"
+channelsnames[1551] = "Sky Sport HD 1 (S)"
+channels[1551] = "S19.2E-133-6-129"
+channelsnames[1552] = "Sky Sport HD 2 (S)"
+channels[1552] = "S19.2E-133-13-114"
+channelsnames[1553] = "Sky Sport HD Extra (S)"
+channels[1553] = "S19.2E-133-12-105"
+channelsnames[1554] = "Eurosport HD (S)"
+channels[1554] = "S19.2E-133-6-132"
+channelsnames[1555] = "ESPN America HD (S)"
+channels[1555] = "S19.2E-133-11-119"
+channelsnames[1556] = "ESPN HD (S)"
+channels[1556] = "S28.2E-2-2032-3841"
+channelsnames[1557] = "ESPN HD (S)"
+channels[1557] = "S28.2E-2-2032-3842"
+channelsnames[1558] = "Eurosport HD (S)"
+channels[1558] = "S28.2E-2-2008-3804"
+channelsnames[1559] = "Sky Sports 1 HD (S)"
+channels[1559] = "S28.2E-2-2005-3802"
+channelsnames[1560] = "Sky Sports 1 HD (S)"
+channels[1560] = "S28.2E-2-2005-3877"
+channelsnames[1561] = "Sky Sports 2 HD (S)"
+channels[1561] = "S28.2E-2-2001-3878"
+channelsnames[1562] = "Sky Sports 2 HD (S)"
+channels[1562] = "S28.2E-2-2001-3881"
+channelsnames[1563] = "Sky Sports 3 HD (S)"
+channels[1563] = "S28.2E-2-2034-3822"
+channelsnames[1564] = "Sky Sports 3 HD (S)"
+channels[1564] = "S28.2E-2-2034-3824"
+channelsnames[1565] = "Sky Sports 4 HD (S)"
+channels[1565] = "S28.2E-2-2033-3826"
+channelsnames[1566] = "Sky Sports 4 HD (S)"
+channels[1566] = "S28.2E-2-2033-3827"
+channelsnames[1567] = "AutoMotorSport HD (S)"
+channels[1567] = "S23.5E-3-3217-6103"
+channelsnames[1568] = "Trace Sports HD (S)"
+channels[1568] = "S23.5E-3-3226-5609"
+channelsnames[1600] = "MTV Live HD (S)"
+channels[1600] = "S28.2E-2-2001-3806"
+channelsnames[1601] = "MTV Live HD (S)"
+channels[1601] = "S19.2E-1-1068-28600"
+channelsnames[1602] = "MTV Live HD (S)"
+channels[1602] = "S19.2E-1-1068-28601"
+channelsnames[1603] = "Planeta HD (S)"
+channels[1603] = "S23.5E-3-3206-5410"
+channelsnames[1604] = "EroXX HD (S)"
+channels[1604] = "S23.5E-3-3206-5411"
+channelsnames[1605] = "EroXXX HD (S)"
+channels[1605] = "S23.5E-3-3206-5412"
+channelsnames[1606] = "DELUXE LOUNGE HD (S)"
+channels[1606] = "S23.5E-3-3217-6100"
+channelsnames[1607] = "UNITEL CLASSICA HD (S)"
+channels[1607] = "S23.5E-3-3217-6101"
+channelsnames[1608] = "MTV Live HD (S)"
+channels[1608] = "S23.5E-3-3226-5600"
+channelsnames[1609] = "iConcerts HD (S)"
+channels[1609] = "S23.5E-3-3226-5604"
+channelsnames[1610] = "Mezzo Live HD (S)"
+channels[1610] = "S23.5E-3-3226-5606"
+channelsnames[1700] = "NHK World HD (S)"
+channels[1700] = "S28.2E-2-2312-53147"
+channelsnames[1800] = "HBO Comedy (S)"
+channels[1800] = "S23.5E-3-3205-5035"
+channelsnames[1801] = "History HD (S)"
+channels[1801] = "S23.5E-3-3205-5034"
+channelsnames[1802] = "Prima family HD (S)"
+channels[1802] = "S23.5E-3-3205-5032"
+channelsnames[1803] = "Nova Sport HD (S)"
+channels[1803] = "S23.5E-3-3205-5031"
+channelsnames[1804] = "Nova HD (S)"
+channels[1804] = "S23.5E-3-3205-5030"
+channelsnames[1805] = "EUROSPORT HD (S)"
+channels[1805] = "S23.5E-3-3221-5041"
+channelsnames[1806] = "HISTORY HD (S)"
+channels[1806] = "S23.5E-3-3221-5042"
+channelsnames[1807] = "FILMBOX HD (S)"
+channels[1807] = "S23.5E-3-3221-5043"
+channelsnames[1808] = "Markiza HD (S)"
+channels[1808] = "S23.5E-3-3221-5044"
+channelsnames[1809] = "Spektrum HD (S)"
+channels[1809] = "S23.5E-3-3221-5045"
+channelsnames[1810] = "HBO HD (S)"
+channels[1810] = "S23.5E-3-3221-5047"
+channelsnames[1811] = "Travel Channel HD CE (S)"
+channels[1811] = "S23.5E-3-3221-5048"
+channelsnames[1812] = "EUROSPORT HD (S)"
+channels[1812] = "S23.5E-0-112109-5041"
+channelsnames[1813] = "HISTORY HD (S)"
+channels[1813] = "S23.5E-0-112109-5042"
+channelsnames[1814] = "FILMBOX HD (S)"
+channels[1814] = "S23.5E-0-112109-5043"
+channelsnames[1815] = "Nova HD (S)"
+channels[1815] = "S23.5E-0-112109-5044"
+channelsnames[1816] = "Nova Sport HD (S)"
+channels[1816] = "S23.5E-0-112109-5045"
+channelsnames[1817] = "HBO HD (S)"
+channels[1817] = "S23.5E-0-112109-5047"
+channelsnames[1818] = "Travel Channel HD (S)"
+channels[1818] = "S23.5E-0-112109-5048"
+channelsnames[1900] = "Sky News HD (S)"
+channels[1900] = "S28.2E-2-2039-3850"
+channelsnames[1950] = "HD Demo ASTRA & RAI (S)"
+channels[1950] = "S23.5E-3-3204-7550"
+channelsnames[1951] = "HD Demo ASTRA & RAI (S)"
+channels[1951] = "S23.5E-0-211778-7550"
+channelsnames[1952] = "High TV (S)"
+channels[1952] = "S30.0W-1388-1388-3"
+channelsnames[1953] = "FOX Sports HD (S)"
+channels[1953] = "S30.0W-1388-1388-7"
+
