@@ -1,3 +1,0 @@
-recording[0] = "No recordings. Sorry";
-recording[1] = "No recordings. Sorry";
-
